--- a/templates/aliwood/pages/data.html
+++ b/templates/aliwood/pages/data.html
@@ -3,90 +3,92 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/data.css' %}" media="all">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dplayer/1.25.0/DPlayer.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dplayer/1.25.0/DPlayer.min.js"></script>
 {% endblock style %}
+{% block js %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dplayer/1.25.0/DPlayer.min.js"></script>
+{% endblock js %}
 
 {% block contents %}
 <div class="content dark full-screen paddingLeft">
   <div class="video-list-wrapper">
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
     <div class="video-item">
-      <div class="video-item-icon">
-        <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-      </div>
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
+        <div class="video-item-icon">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </div>
       </div>
     </div>
   </div>
