--- a/templates/aliwood/pages/data.html
+++ b/templates/aliwood/pages/data.html
@@ -9,8 +9,8 @@
 {% endblock js %}
 
 {% block contents %}
-<div class="content dark full-screen paddingLeft">
-  <div class="video-list-wrapper">
+<div class="content dark full-screen paddingSideBar">
+  <div class="video-list-wrapper content-section">
     <div class="video-item">
       <div class="video-item-thumbnail">
         <img src="{% static 'image/video.jpg' %}">
