--- a/templates/aliwood/pages/edit/case-simulate.html
+++ b/templates/aliwood/pages/edit/case-simulate.html
@@ -10,7 +10,7 @@
 {% endblock js %}
 
 {% block contents %}
-<div class="content dark full-screen paddingLeft case-simulate">
+<div class="content dark full-screen paddingSideBar case-simulate">
   <div class="content-section">
     <div class="content-section-title">案例选择<span>Select Case</span></div>
     <div class="content-section-items">
