--- a/templates/aliwood/pages/edit/case.html
+++ b/templates/aliwood/pages/edit/case.html
@@ -7,7 +7,7 @@
 {% endblock style %}
 
 {% block contents %}
-<div class="content dark full-screen paddingLeft">
+<div class="content dark full-screen paddingSideBar">
   <div class="video-list-wrapper">
     <div class="video-item">
       <div class="video-item-icon">
