--- a/templates/aliwood/pages/edit/style-template.html
+++ b/templates/aliwood/pages/edit/style-template.html
@@ -10,7 +10,7 @@
 {% endblock js %}
 
 {% block contents %}
-<div class="content dark full-screen paddingLeft style-template">
+<div class="content dark full-screen paddingSideBar style-template">
   <div class="content-section">
     <div class="content-section-title">风格选择<span>Template</span></div>
     <div class="content-section-items">
@@ -69,7 +69,7 @@
       <p>来上传自己的案例</p>
     </div> -->
   </div>
-  <div class="upload-btn active">
+  <div class="content-btn upload-btn active">
     <a href="#">开始剪辑</a>
   </div>
   <div class="player-shadow flexColumn">
