--- a/templates/aliwood/pages/edit/case-simulate.html
+++ b/templates/aliwood/pages/edit/case-simulate.html
@@ -41,7 +41,7 @@
       <p>来上传自己的案例</p>
     </div> -->
   </div>
-  <div class="upload-btn">
+  <div class="content-btn upload-btn">
     <a href="#">开始剪辑</a>
   </div>
   <div class="player-shadow flexColumn">
