--- a/templates/aliwood/pages/data/data.html
+++ b/templates/aliwood/pages/data/data.html
@@ -1,4 +1,4 @@
-{% extends 'aliwood/layout/with-siderbar-helper.html' %}
+{% extends 'aliwood/layout/with-sidebar-helper.html' %}
 {% block style %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/data.css' %}" media="all">
@@ -111,7 +111,7 @@
     </ul>
   </nav>
   <div class="upload-btn">
-    <a href="#">上传自己的模板视频</a>
+    <a href="./upload">上传自己的模板视频</a>
   </div>
   <div class="player-shadow flexColumn">
     <div class="player-shadow-close" id="player-btn-close">
