--- a/templates/aliwood/pages/edit/case-simulate.html
+++ b/templates/aliwood/pages/edit/case-simulate.html
@@ -1,4 +1,4 @@
-{% extends 'aliwood/layout/with-siderbar-helper.html' %}
+{% extends 'aliwood/layout/with-sidebar-helper.html' %}
 {% block style %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/edit.css' %}" media="all">
@@ -42,7 +42,7 @@
     </div> -->
   </div>
   <div class="content-btn upload-btn">
-    <a href="#">开始剪辑</a>
+    <a href="./gen_video">开始剪辑</a>
   </div>
   <div class="player-shadow flexColumn">
     <div class="player-shadow-close" id="player-btn-close">
