feat: add anlyse page

--- a/templates/aliwood/pages/edit/case.html
+++ b/templates/aliwood/pages/edit/case.html
@@ -118,7 +118,7 @@
       <div class="shadow-player-btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div>
     </div>
     <div class="upload-btn">
-      <a href="#">查看视频分析</a>
+      <a href="#">使用这个案例进行剪辑</a>
     </div>
   </div>
 </div>
