--- a/templates/aliwood/pages/data/data.html
+++ b/templates/aliwood/pages/data/data.html
@@ -123,7 +123,7 @@
       <div class="shadow-player-btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div>
     </div>
     <div class="upload-btn">
-      <a href="#">查看视频分析</a>
+      <a href="./detail">查看视频分析</a>
     </div>
   </div>
 </div>
