--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,7 +123,7 @@ body {
 }
 
 .dropzone {
-  min-height: 0 !important;
+  min-height: 1.31rem !important;
   border: 0 !important;
   background: none !important;
   padding: 0 !important;
