--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -48,10 +48,15 @@
   margin-top: 0.82rem;
   margin-left: auto;
   margin-right: auto;
+  background: #C6C1B3;
+  cursor: default;
+  pointer-events: none;
 }
 
 .upload-main .active {
   background: #F7CB51;
+  cursor: pointer;
+  pointer-events: auto;
 }
 
 .upload-params {
@@ -94,4 +99,60 @@
   font-size: 0.18rem;
   border-radius: 0.05rem;
   cursor: pointer;
+}
+
+.dropzone .dz-message {
+  margin: 0;
+}
+
+.dropzone .dz-preview {
+  position: relative;
+  margin: 0;
+}
+
+.dropzone .dz-preview .dz-image {
+  border-radius: 0 !important;
+  width: 100%;
+  height: 100%;
+}
+
+.dropzone .dz-delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 100;
+}
+
+.dz-delete img {
+  width: 0.3rem;
+  height: 0.3rem;
+  vertical-align: top;
+  cursor: pointer !important;
+}
+
+.spinner-border {
+  display: none;
+  width: 1rem;
+  height: 1rem;
+  vertical-align: text-bottom;
+  border: .25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border .75s linear infinite;
+  animation: spinner-border .75s linear infinite;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
+}
+
+@keyframes spinner-border {
+  to { transform: rotate(360deg); }
 }
