--- a/templates/aliwood/pages/data/upload.html
+++ b/templates/aliwood/pages/data/upload.html
@@ -1,6 +1,8 @@
 {% extends 'aliwood/layout/base.html' %}
 {% block style %}
 {% load static %}
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css"
+  media="all">
 <link rel="stylesheet" type="text/css" href="{% static 'css/upload.css' %}" media="all">
 {% endblock style %}
 {% block js %}
@@ -12,34 +14,75 @@
   <div class="upload-wrapper">
     <div class="upload-main">
       <div class="upload-main-title">视频上传</div>
-      <form class="upload-icon dropzone" action="/file-upload" id="my-awesome-dropzone">
+      <div class="upload-icon dropzone" id="my-awesome-dropzone">
         <img src="{% static 'image/upload.png' %}" class="dz-message">
-      </form>
+      </div>
+      <div class="files" id="previews">
+        <div class="dz-preview dz-file-preview" id="tpl">
+          <div class="dz-image"><img data-dz-thumbnail></div>
+          <div class="dz-details">
+            <div class="dz-size">
+              <span data-dz-size></span>
+            </div>
+            <div class="dz-filename"><span data-dz-name></span></div>
+          </div>
+          <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>
+          <div class="dz-success-mark"> <svg width="54px" height="54px" viewBox="0 0 54 54" version="1.1"
+              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+              xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+              <title>Check</title>
+              <defs></defs>
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                <path
+                  d="M23.5,31.8431458 L17.5852419,25.9283877 C16.0248253,24.3679711 13.4910294,24.366835 11.9289322,25.9289322 C10.3700136,27.4878508 10.3665912,30.0234455 11.9283877,31.5852419 L20.4147581,40.0716123 C20.5133999,40.1702541 20.6159315,40.2626649 20.7218615,40.3488435 C22.2835669,41.8725651 24.794234,41.8626202 26.3461564,40.3106978 L43.3106978,23.3461564 C44.8771021,21.7797521 44.8758057,19.2483887 43.3137085,17.6862915 C41.7547899,16.1273729 39.2176035,16.1255422 37.6538436,17.6893022 L23.5,31.8431458 Z M27,53 C41.3594035,53 53,41.3594035 53,27 C53,12.6405965 41.3594035,1 27,1 C12.6405965,1 1,12.6405965 1,27 C1,41.3594035 12.6405965,53 27,53 Z"
+                  id="Oval-2" stroke-opacity="0.198794158" stroke="#747474" fill-opacity="0.816519475" fill="#FFFFFF"
+                  sketch:type="MSShapeGroup"></path>
+              </g>
+            </svg> </div>
+          <div class="dz-error-mark"> <svg width="54px" height="54px" viewBox="0 0 54 54" version="1.1"
+              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+              xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+              <title>Error</title>
+              <defs></defs>
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                <g id="Check-+-Oval-2" sketch:type="MSLayerGroup" stroke="#747474" stroke-opacity="0.198794158"
+                  fill="#FFFFFF" fill-opacity="0.816519475">
+                  <path
+                    d="M32.6568542,29 L38.3106978,23.3461564 C39.8771021,21.7797521 39.8758057,19.2483887 38.3137085,17.6862915 C36.7547899,16.1273729 34.2176035,16.1255422 32.6538436,17.6893022 L27,23.3431458 L21.3461564,17.6893022 C19.7823965,16.1255422 17.2452101,16.1273729 15.6862915,17.6862915 C14.1241943,19.2483887 14.1228979,21.7797521 15.6893022,23.3461564 L21.3431458,29 L15.6893022,34.6538436 C14.1228979,36.2202479 14.1241943,38.7516113 15.6862915,40.3137085 C17.2452101,41.8726271 19.7823965,41.8744578 21.3461564,40.3106978 L27,34.6568542 L32.6538436,40.3106978 C34.2176035,41.8744578 36.7547899,41.8726271 38.3137085,40.3137085 C39.8758057,38.7516113 39.8771021,36.2202479 38.3106978,34.6538436 L32.6568542,29 Z M27,53 C41.3594035,53 53,41.3594035 53,27 C53,12.6405965 41.3594035,1 27,1 C12.6405965,1 1,12.6405965 1,27 C1,41.3594035 12.6405965,53 27,53 Z"
+                    id="Oval-2" sketch:type="MSShapeGroup"></path>
+                </g>
+              </g>
+            </svg> </div>
+          <div class="dz-delete">
+            <img class="" src="{% static 'image/close.png' %}" data-dz-remove />
+          </div>
+        </div>
+      </div>
       <div class="upload-describe">
         <p>点击“+”</p>
         <p>或拖拽文件到虚线框内</p>
         <p>来上传自己的案例</p>
       </div>
-      <div class="upload-btn active">
-        <a href="./rank_result">分析视频</a>
+      <div class="upload-btn">
+        <san>分析视频</san>
       </div>
     </div>
     <div class="upload-params">
       <div class="upload-params-title">标签选择</div>
       <div class="upload-params-group">
-        <div class="upload-params-item">
+        <div class="upload-params-item" id="targetClientId">
           <div class="upload-params-item-title">性别</div>
           <div class="upload-params-item-body clearfix">
-            <div class="upload-param active">男</div>
+            <div class="upload-param active" id="male">男</div>
             <div class="upload-param">女</div>
             <div class="upload-param">儿童</div>
             <div class="upload-param">男女通用</div>
           </div>
         </div>
-        <div class="upload-params-item">
+        <div class="upload-params-item" id="productCategoryId">
           <div class="upload-params-item-title">产品类型</div>
           <div class="upload-params-item-body clearfix">
-            <div class="upload-param active">上衣</div>
+            <div class="upload-param active" id="sy">上衣</div>
             <div class="upload-param">外套</div>
             <div class="upload-param">毛衣</div>
             <div class="upload-param">衬衫</div>
@@ -57,33 +100,33 @@
             <div class="upload-param">其他</div>
           </div>
         </div>
-        <div class="upload-params-item">
+        <div class="upload-params-item" id="cameraSceneId">
           <div class="upload-params-item-title">拍摄场景</div>
           <div class="upload-params-item-body clearfix">
-            <div class="upload-param active">室内</div>
+            <div class="upload-param active" id="sn">室内</div>
             <div class="upload-param">室外</div>
           </div>
         </div>
-        <div class="upload-params-item">
+        <div class="upload-params-item" id="serviceSceneId">
           <div class="upload-params-item-title">业务场景</div>
           <div class="upload-params-item-body clearfix">
-            <div class="upload-param active">产品上新</div>
+            <div class="upload-param active" id="sx">产品上新</div>
             <div class="upload-param">品牌宣传</div>
           </div>
         </div>
-        <div class="upload-params-item">
+        <div class="upload-params-item" id="tempoStyleId">
           <div class="upload-params-item-title">节奏风格</div>
           <div class="upload-params-item-body clearfix">
-            <div class="upload-param active">动感</div>
+            <div class="upload-param active" id="dg">动感</div>
             <div class="upload-param">变奏</div>
             <div class="upload-param">日常</div>
             <div class="upload-param">平缓</div>
           </div>
         </div>
-        <div class="upload-params-item">
+        <div class="upload-params-item" id="pictureStyleId">
           <div class="upload-params-item-title">画面风格</div>
           <div class="upload-params-item-body clearfix">
-            <div class="upload-param active">时尚</div>
+            <div class="upload-param active" id="ss">时尚</div>
             <div class="upload-param">优雅</div>
             <div class="upload-param">可爱</div>
             <div class="upload-param">自然</div>
@@ -93,11 +136,15 @@
       </div>
     </div>
   </div>
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
 </div>
 {% endblock contents %}
 
 {% block scripts %}
 <script type="text/javascript">
+   var params = {};
   // 切换标签
   $('.upload-param').click(function () {
     $(this).parent().children().each(function () {
@@ -109,6 +156,36 @@
       });
     });
     $(this).addClass('active');
+  });
+
+  // 配置dropzone
+  var previewNode = document.querySelector("#tpl");
+  previewNode.id = "";
+  var previewTemplate = previewNode.parentNode.innerHTML;
+  previewNode.parentNode.removeChild(previewNode);
+  var myDropzone = new Dropzone("#my-awesome-dropzone", {
+    url: "/file/post",
+    previewTemplate: previewTemplate
+  });
+  myDropzone.on("complete", function (file, data) {
+    // params.randomCode = data.randomCode;
+    params.randomCode = '1234122';
+    $('.dz-image img').attr('src', '/static/image/video.jpg');
+    $(".upload-btn").toggleClass('active');
+  });
+  myDropzone.on('removedfile', function () {
+    $(".upload-btn").toggleClass('active');
+  });
+
+  // 分析视频
+  $(".upload-btn").click(function () {
+    $('.upload-wrapper').css('display', 'none');
+    $('.spinner-border').css('display', 'inline-block');
+    ['targetClientId', 'productCategoryId', 'cameraSceneId', 'serviceSceneId ',
+    'tempoStyleId', 'pictureStyleId '].map(function(key) {
+      params[key] = $('#' + key).children('.upload-params-item-body').children('.active').attr('id');
+    });
+    $.post("./video_analyse", params);
   });
 </script>
 {% endblock scripts %}
