--- a/templates/aliwood/pages/edit/style-template.html
+++ b/templates/aliwood/pages/edit/style-template.html
@@ -1,6 +1,8 @@
 {% extends 'aliwood/layout/with-sidebar-helper.html' %}
 {% block style %}
 {% load static %}
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css"
+  media="all">
 <link rel="stylesheet" type="text/css" href="{% static 'css/edit.css' %}" media="all">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dplayer/1.25.0/DPlayer.min.css">
 {% endblock style %}
@@ -60,14 +62,26 @@
         清空
       </div>
     </div>
-    <form class="upload-icon dropzone" action="/file-upload" id="my-awesome-dropzone">
-      <img src="{% static 'image/upload.png' %}" class="dz-message">
-    </form>
-    <!-- <div class="upload-describe">
-      <p>点击“+”</p>
-      <p>或拖拽文件到虚线框内</p>
-      <p>来上传自己的案例</p>
-    </div> -->
+    <div class="upload-icon">
+      <img src="{% static 'image/upload.png' %}">
+    </div>
+    <div class="dropzone" id="my-awesome-dropzone">
+      <p class="upload-describe dz-message">
+        点击“+”或拖拽文件到虚线框内来上传自己的案例
+      </p>
+    </div>
+    <div class="files" id="previews">
+      <div class="dz-preview dz-file-preview" id="tpl">
+        <div class="dz-image"><img data-dz-thumbnail></div>
+        <div class="dz-details">
+          <div class="dz-filename"><span data-dz-name></span></div>
+        </div>
+        <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>
+        <div class="dz-delete">
+          <img class="" src="{% static 'image/close.png' %}" data-dz-remove />
+        </div>
+      </div>
+    </div>
   </div>
   <div class="content-btn upload-btn active">
     <a href="./gen_video">开始剪辑</a>
@@ -108,6 +122,24 @@
 
 {% block scripts %}
 <script type="text/javascript">
+  // 配置dropzone
+  var previewNode = document.querySelector("#tpl");
+  previewNode.id = "";
+  var previewTemplate = previewNode.parentNode.innerHTML;
+  previewNode.parentNode.removeChild(previewNode);
+  var myDropzone = new Dropzone("#my-awesome-dropzone", {
+    url: "/video_upload",
+    previewTemplate: previewTemplate
+  });
+  myDropzone.on("success", function (file, data) {
+    $('.dz-image img').attr('src', data.imageUrl);
+  });
+  myDropzone.on('removedfile', function () {});
+  // 清空所有素材
+  $('.content-section-btn').click(function () {
+    myDropzone.removeAllFiles();
+  });
+
   // 加载dplayer
   var dp = new DPlayer({
     container: document.getElementById('dplayer'),
