--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,6 +93,7 @@ body {
 .content {
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .padding83 {
@@ -123,6 +124,7 @@ body {
 }
 
 .dropzone {
+  display: inline-block;
   min-height: 1.31rem !important;
   border: 0 !important;
   background: none !important;
