--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -54,8 +54,8 @@
 }
 
 .content-section-items .video-item .video-item-thumbnail {
-  width: 1.2rem;
-  height: 1.2rem;
+  width: 1.31rem;
+  height: 1.31rem;
 }
 
 .content-section-items .video-item .video-item-describe {
@@ -88,7 +88,7 @@
   cursor: pointer;
 }
 
-.case-simulate .content-section-item img {
+.case-simulate .content-section-item .upload-icon img {
   width: 1.31rem;
   height: 1.31rem;
 }
@@ -313,31 +313,46 @@
   height: 1.31rem;
 }
 
-.dropzone {
+.upload-material .dropzone {
   position: absolute;
   top: 0.79rem;
   left: 0.75rem;
   min-height: 1.31rem;
 }
 
-.dropzone .dz-message {
+.upload-material .dropzone {
+  position: absolute;
+  top: 0.79rem;
+  left: 0.75rem;
+  width: 100%;
+}
+
+.upload-material .dropzone .dz-message {
   position: relative;
   left: 1.57rem;
   top: 0.52rem;
   font-size: 0.18rem;
   margin: 0;
+  text-align: left;
 }
 
 .dropzone .dz-preview {
   position: relative;
   margin: 0;
-  margin-left: 0.21rem;
-  width: 1.2rem;
-  height: 1.2rem;
-  min-height: 1.2rem;
+  width: 1.31rem;
+  height: 1.31rem;
+  min-height: 1.31rem;
 }
 
-.dropzone >div:nth-child(2) {
+.upload-material .dz-preview {
+  margin-left: 0.21rem;
+}
+
+.upload-material {
+  width: 100%;
+}
+
+.upload-material .dropzone >div:nth-child(2) {
  margin-left: 1.52rem;
 }
 
@@ -364,4 +379,66 @@
   height: 0.3rem;
   vertical-align: top;
   cursor: pointer !important;
+}
+
+.from-database img {
+  width: 1.31rem;
+  height: 1.31rem;
+}
+
+.case-select .dz-message {
+  position: relative;
+}
+
+.case-select .dz-message p {
+  text-align: center;
+  margin: 0;
+  line-height: 0.24rem;
+}
+
+.case-select .upload-describe {
+  position: absolute;
+  left: 1.45rem;
+  top: 0.3rem;
+  width: 2.4rem;
+  height: 0.69rem;
+}
+
+.case-select .dropzone {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 3.35rem;
+  height: 1.31rem;
+}
+
+.case-select .dropzone .dz-message {
+  font-size: 0.18rem;
+  margin: 0;
+}
+
+.from-database {
+  position: absolute;
+  left: 4rem;
+  top: 0;
+}
+
+.from-database p {
+  font-size: 0.18rem;
+  line-height: 0.24rem;
+  margin: 0;
+  text-align: center;
+}
+
+.case-simulate .content-section {
+  margin-bottom: 0.83rem;
+}
+
+.from-database-tip {
+  position: absolute;
+  top: 0.31rem;
+  left: 1.5rem;
+  width: 1.5rem;
+  height: 0.69rem;
+  cursor: default;
 }
