--- a/static/css/rank.css
+++ b/static/css/rank.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 
-.content .upload-icon img {
+.content .upload-icon > img {
   width: 1.31rem;
   cursor: pointer;
 }
@@ -96,4 +96,33 @@
 
 .content .upload-btn-active {
   background: #FACD52;
+}
+
+.dropzone .dz-message {
+  margin: 0;
+}
+
+.dropzone .dz-preview {
+  position: relative;
+  margin: 0;
+}
+
+.dropzone .dz-preview .dz-image {
+  border-radius: 0 !important;
+  width: 100%;
+  height: 100%;
+}
+
+.dropzone .dz-delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 100;
+}
+
+.dz-delete img {
+  width: 0.3rem;
+  height: 0.3rem;
+  vertical-align: top;
+  cursor: pointer !important;
 }
