--- a/static/css/rank.css
+++ b/static/css/rank.css
@@ -94,7 +94,7 @@
   pointer-events: none;
 }
 
-.content .upload-btn-active {
+.content .active {
   background: #FACD52;
 }
 
@@ -104,11 +104,18 @@
 
 .dropzone .dz-preview {
   position: relative;
-  margin: 0;
+  margin: 0 !important;
+  width: 2.78rem;
+  height: 2.78rem;
 }
 
 .dropzone .dz-preview .dz-image {
   border-radius: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+.dropzone .dz-preview .dz-image img {
   width: 100%;
   height: 100%;
 }
